# Rust-API

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/nginx/: nginx.conf
frontend/public/assets/: env.js
frontend/src/: App.vue  main.ts
frontend/src/bootstrap/: router.ts
frontend/src/components/auth/: Register.vue
frontend/src/components/holders/: AppHolder.vue  AuthHolder.vue  QuizHolder.vue
frontend/src/interfaces/: answer.interface.ts  question.interface.ts  quiz.interface.ts  user.interface.ts
frontend/src/screens/: Home.vue  Question.vue  Quiz.vue  QuizResult.vue
frontend/src/screens/components/: Answer.vue  QuizCard.vue
migrations/2023-01-19-002024_quizs/: down.sql  up.sql
migrations/2023-01-19-002144_questions/: up.sql
migrations/2023-01-19-002214_quiz_questions/: down.sql  up.sql
migrations/2023-01-19-002231_users/: up.sql
migrations/2023-01-19-002243_user_history/: up.sql
postman/: Research project- Rust API.postman_collection.json
src/: db.rs  main.rs  schema.rs
src/guards/: adminguard.rs  authguard.rs  mod.rs
src/models/: clientresponse.rs  mod.rs  question.rs  quiz.rs  user.rs
src/routes/: mod.rs  quiz_routes.rs  user_routes.rs
src/services/: mod.rs  question_service.rs  quiz_service.rs  user_service.rs
