[package]
name = "rust_api_project"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
rocket = { version = "0.5.0-rc.1", features= ["json"] }
diesel = { version = "2.0.0", features = ["mysql", "serde_json"] }
serde_json = { version = "1.0.48", features = ["preserve_order"]}
dotenv = "0.15.0"
diesel_migrations = "1.4.0"
rocket_firebase_auth = "0.2.4"
rocket_cors = "0.6.0-alpha1"
